# wd3000

./: .gitignore  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: android.yml  ci.yml  deploy.yml  release.yml  test.yml
.husky/: pre-push
.juggler/: instance.json  session.json
.juggler/Task 1--conv_e1fhgbrxf/: doc.yjs
e2e/: smoke.spec.ts
e2e/helpers/: app.ts
scripts/: assemble-pages.mjs  sync-version.mjs
src/: App.tsx  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: osc-midi.toml  sensors.toml
src-tauri/plugins/sensors/: Cargo.toml  build.rs
src-tauri/plugins/sensors/android/: .gitignore  build.gradle.kts
src-tauri/plugins/sensors/android/src/main/java/com/grantler_instruments/wd3000/sensors/: SensorsPlugin.kt
src-tauri/plugins/sensors/ios/: Package.swift
src-tauri/plugins/sensors/ios/Sources/: SensorsPlugin.swift
src-tauri/plugins/sensors/permissions/: default.toml
src-tauri/plugins/sensors/permissions/autogenerated/: reference.md
src-tauri/plugins/sensors/permissions/autogenerated/commands/: list_sensors.toml
src-tauri/plugins/sensors/permissions/schemas/: schema.json
src-tauri/plugins/sensors/src/: lib.rs
src-tauri/src/: artnet.rs  artnet_listen.rs  enttec_pro.rs  lib.rs  midi.rs  midi_input.rs  midi_virtual.rs  mqtt.rs  network.rs  osc.rs  osc_listen.rs  tuio_listen.rs  tuio_send.rs
src-tauri/src/sensors/: macos_lid.rs  mod.rs
src-tauri/src/sensors/ambient_light/: linux.rs  macos.rs  mod.rs  windows.rs
src/i18n/: index.ts  (+1 more)
website/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+219 files in other folders)
