[package]
name = "wd3000"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sensors = { path = "./plugins/sensors" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rosc = "0.11"
midir = "0.11"
tuioxide = "0.3"
rumqttd = { version = "0.20", default-features = false, features = ["websocket"] }
rumqttc = { version = "0.25", default-features = false, features = ["websocket"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
url = "2"
serialport = "4.6"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Devices_Sensors"] }

