[package]
name = "tauri-plugin-sensors"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-sensors"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
